fix(OpenCloseBox.jsx) fix make bigger then refresh -> no scroll bar jitter = use overflow: overlay

--- a/src/components/parts/OutputDisplay.css
+++ b/src/components/parts/OutputDisplay.css
@@ -61,8 +61,8 @@
 	width: 100%; 
 	height: 100%;
 	resize: none;
-	overflow: none;
-	transition: height 2s, width 2s;
+	overflow: hidden;
+	transition: height 1s, width 1s;
 }
 
 .iFrame {
